# rules_multitransition

./: .bazeliskrc  .bazelrc  .gitignore  MODULE.bazel  README.md  REPO.bazel  defs.bzl  multitransition_test.bzl  transition_config.bzl  transition_config_flag.bzl
.github/actions/ci-env-setup/: action.yml
.github/workflows/: check.yml  ci.bazelrc
.zed/: settings.json
config/: BUILD.bazel
examples/compilation_mode/: BUILD.bazel  MODULE.bazel  check_flag.bash  dummy.cpp  local_config.bzl
examples/target_platform/: BUILD.bazel  MODULE.bazel  info.cpp
examples/target_platform_with_custom_flag/: BUILD.bazel  MODULE.bazel  info.cpp  transition_config.bzl
rules/: local_config.bzl
test/: BUILD.bazel  run_example.bash
tools/: BUILD.bazel
