module(
    name = "rules_multitransition",
    version = "0.0.0",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.8.2",
)
bazel_dep(
    name = "rules_cc",
    version = "0.2.14",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.1.1",
    dev_dependency = True,
)
