module(
    name = "rules_multitransition",
    version = "0.0.0",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.8.2",
)
bazel_dep(
    name = "rules_cc",
    version = "0.2.14",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.1.1",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_shell",
    version = "0.6.1",
    dev_dependency = True,
)
bazel_dep(
    name = "cortex_m",
    dev_dependency = True,
)
bazel_dep(
    name = "toolchains_arm_gnu",
    dev_dependency = True,
)

[
    archive_override(
        module_name = "cortex_m",
        integrity = "sha256-RCBK+5PFoY950AbzLU7AmyqE8rVOmGN9Pkxw2YWXXhk=",
        strip_prefix = "cortex_m-{}".format(commit),
        url = "https://github.com/oliverlee/cortex_m/archive/{}.tar.gz".format(commit),
    )
    for commit in ["37981beef61a75c26672e9330c1cf6da875af7bc"]
]

[
    archive_override(
        module_name = "toolchains_arm_gnu",
        integrity = "sha256-CM6gtNvZ3Yd2/psrpyFIHi4nDQkoTSKb5jMRD4JiHxU=",
        strip_prefix = "toolchains_arm_gnu-{}".format(commit),
        url = "https://github.com/hexdae/toolchains_arm_gnu/archive/{}.tar.gz".format(commit),
    )
    for commit in ["76837cb143e98566008eab52e0003a49b6d18e7e"]
]

local_config = use_extension(
    "//rules:local_config.bzl",
    "local_config",
    dev_dependency = True,
)
use_repo(
    local_config,
    "local_workspace_directory",
)

cc_configure = use_extension(
    "@rules_cc//cc:extensions.bzl",
    "cc_configure_extension",
    dev_dependency = True,
)
use_repo(
    cc_configure,
    "local_config_cc",
)
